refactor(0.0.1) Removendo códigos não utilizados